--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
-
 @import 'tailwindcss';
 @import "tw-animate-css";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @custom-variant dark (&:is(.dark *));
 
@@ -175,5 +178,3 @@
   -webkit-text-stroke: 1px black;
   text-stroke: 1px black; /* For extra support */
 }
-
- 
